# Flask-Todo-App

./: 404.html  500.html  LICENSE  README.md  app.py  pyproject.toml  requirement.txt
src/: 403.html  app.py  todo.db
src/templates/: about.html  index.html  update.html
templates/: base.html
